# projeto_01

backend/: pyproject.toml
backend/alunos/: admin.py  models.py
backend/alunos/migrations/: 0001_initial.py  0002_estados_delete_aluno.py  0003_cidade.py  0004_pessoa.py  0005_alter_pessoa_options.py  0006_rename_estados_estado.py
backend/config/: settings.py
